# mini-browser

./: .gitignore
.claude/: settings.local.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
static/: index.html
